Fixed Search Loader and Site Logo on Mobile

--- a/src/app/site-body/blog/search-posts/search.posts.component.scss
+++ b/src/app/site-body/blog/search-posts/search.posts.component.scss
@@ -42,13 +42,13 @@
     position: absolute;
     top: -24px;
     left: -24px;
-    width: calc(100% - 30px);
-    height: calc(100% - 30px);
+    width: calc(100% - 32px);
+    height: calc(100% - 32px);
     background: white;
     z-index: 1;
     text-align: center;
     padding: 40px;
     font-size: 24px;
     font-weight: 600;
-    line-height: 2em;
+    line-height: 4em;
 }
